# intech-grid-en16

./: .gitmodules  .markdown-link-check.json  .markdownlint.jsonc  CLAUDE.md  Grid.py  README.md  __init__.py  elements.py  main.py  mappings.py  pyproject.toml  pyrightconfig.json  session.py  skin.py  target_track_controls.py
.github/workflows/: ci.yml
configs/: EN16-Control.lua
control_surface/: CLAUDE.md  Grid.py  pyproject.toml  pyrightconfig.json
decompiler/: CLAUDE.md  README.md  bytecode_utils.py  cli.py  llm_recovery.py  pyproject.toml  reconstructed_animated_color.py  recover_browser.py  standalone_decompile.py
docs/: EN16_CONFIG.md  GRID_FIRMWARE.md  GRID_LUA.md  ableton-framework-versions.md  control-surface-guide.md  control-surface.md  decompilation.md  en16-config.md  framework-evolution.md  grid-firmware.md  grid-lua.md  lua-config-guide.md
docs/api/: button-handler.md  button_handler.md  draw-handler.md  draw_handler.md  element.md  encoder-handler.md  encoder_handler.md  endless-handler.md  endless_handler.md  global-functions.md  global_functions.md  init-handler.md  init_handler.md  mapmode-handler.md  mapmode_handler.md  midirx-handler.md  midirx_handler.md  timer-handler.md  (+3 more)
grid/: EN16-Control.json  EN16-Control.lua  EN16-backup.json
grid-cli/: CLAUDE.md  README.md  connection.ts  eslint.config.js  grid-cli.ts  lib.test.ts  lib.ts  lua-loader.test.ts  lua-loader.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: check-docs.sh
tools/: README.md  grid-cli.ts  lua-runtime.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+5 files in other folders)
